force-app/main/default/objects/MPInvoice__c/MPInvoice__c.object-meta.xml
<CustomObject>
    <label>Factura</label>
    <nameField>
        <displayFormat>FCT-{00000}</displayFormat>
        <label>Nombre de Factura</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facturas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>