force-app/main/default/objects/MPInvoice__c/fields/MPCreatedAt__c.field-meta.xml
<CustomField>
    <fullName>MPCreatedAt__c</fullName>
    <label>Fecha de Creación</label>
    <type>Date</type>
</CustomField>