force-app/main/default/objects/MPInvoice__c/fields/MPDocumentId__c.field-meta.xml
<CustomField>
    <fullName>MPDocumentId__c</fullName>
    <label>ID de Documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>