force-app/main/default/objects/MPInvoice__c/fields/MPDocumentType__c.field-meta.xml
<CustomField>
    <fullName>MPDocumentType__c</fullName>
    <label>Tipo de Documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>