force-app/main/default/objects/MPInvoice__c/fields/MPGrossAmount__c.field-meta.xml
<CustomField>
    <fullName>MPGrossAmount__c</fullName>
    <label>Monto Bruto</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>