force-app/main/default/objects/MPInvoice__c/fields/MPInvoiceAPIStatus__c.field-meta.xml
<CustomField>
    <fullName>MPInvoiceAPIStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detalles API Create</label>
    <referenceTo>MPIntegrationStatus__c</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <type>Lookup</type>
</CustomField>