force-app/main/default/objects/MPInvoice__c/fields/MPInvoiceDocumentAPIStatus__c.field-meta.xml
<CustomField>
    <fullName>MPInvoiceDocumentAPIStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detalles API Document</label>
    <referenceTo>MPIntegrationStatus__c</referenceTo>
    <relationshipLabel>Facturas (Detalles API Document)</relationshipLabel>
    <relationshipName>Facturas2</relationshipName>
    <type>Lookup</type>
</CustomField>