force-app/main/default/objects/MPInvoice__c/fields/MPInvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>MPInvoiceNumber__c</fullName>
    <label>Número de Factura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>