force-app/main/default/objects/MPInvoice__c/fields/MPInvoicePaidAPIStatus__c.field-meta.xml
<CustomField>
    <fullName>MPInvoicePaidAPIStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detalles API 24.2</label>
    <referenceTo>MPIntegrationStatus__c</referenceTo>
    <relationshipLabel>Facturas (Detalles API 24.2)</relationshipLabel>
    <relationshipName>Facturas1</relationshipName>
    <type>Lookup</type>
</CustomField>