force-app/main/default/objects/MPInvoice__c/fields/MPPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>MPPaymentDate__c</fullName>
    <label>Fecha de Pago</label>
    <type>Date</type>
</CustomField>