force-app/main/default/objects/MPInvoice__c/fields/MPPercentagePayment__c.field-meta.xml
<CustomField>
    <fullName>MPPercentagePayment__c</fullName>
    <label>Porcentaje de Pago</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>