force-app/main/default/objects/MPInvoice__c/fields/MPValidFrom__c.field-meta.xml
<CustomField>
    <fullName>MPValidFrom__c</fullName>
    <label>Válido Desde</label>
    <type>Date</type>
</CustomField>