force-app/main/default/objects/MPInvoice__c/fields/Orden__c.field-meta.xml
<CustomField>
    <fullName>Orden__c</fullName>
    <label>Orden</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Order.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>MPTermination</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Facturas</relationshipLabel>
    <relationshipName>Facturas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>