force-app/main/default/objects/MPInvoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
                <label>Completada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>